# jpgtn

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  bootstrap  config.status  configure  configure.ac
cfg/: libjpeg.m4  utility.m4
doc/: ANNOUNCE  CHANGES  Makefile  Makefile.am  Makefile.in  copyleft.notice  jpgtn-2.07.lsm  jpgtn.1
src/: Makefile  Makefile.am  Makefile.in  common.h  config-h.in  creategrid.c  cutimage.c  jpgtn  jpgtn.c  jpgtn.h  readjpeg.c  resizepic.c  writejpeg.c
src/.deps/: creategrid.Po  cutimage.Po  jpgtn.Po  readjpeg.Po  resizepic.Po  writejpeg.Po
src/replace/: Makefile  Makefile.am  Makefile.in
test/: Makefile  Makefile.am  Makefile.in
test/grid_test/: test_script.sh
